--- a/DiscoverYourself/Views/Account/Login.cshtml
+++ b/DiscoverYourself/Views/Account/Login.cshtml
@@ -19,6 +19,9 @@
         <input type="password" name="password" placeholder="Password" class="neon-input" required />
         <button type="submit" class="neon-button">Login</button>
     </form>
+    <div class="register-link">
+        <a href="@Url.Action("Register", "Account")" class="btn btn-info">Register here</a>
+    </div>
 </div>
 </body>
 </html>
