continue accumulation goals

--- a/DiscoverYourself/Views/Home/Index.cshtml
+++ b/DiscoverYourself/Views/Home/Index.cshtml
@@ -17,10 +17,10 @@
         </div>
     </div>
     <div class="blog-section">
-        <button class="target-btn">Birikim Hedeflerim</button>
-        <button class="target-btn">Yatırım Hedeflerim</button>
-        <button class="target-btn">Eğitim Hedeflerim</button>
-        <button class="target-btn">Gelişim Hedeflerim</button>
+        <a href="/AccumulationGoals/Index/" class="target-btn">Accumulation Goals</a>
+        <button href="" class="target-btn">Yatırım Hedeflerim</button>
+        <button href="" class="target-btn">Eğitim Hedeflerim</button>
+        <button href="" class="target-btn">Gelişim Hedeflerim</button>
     </div>
 </div>
 
