--- a/DiscoverYourself/Views/Home/Index.cshtml
+++ b/DiscoverYourself/Views/Home/Index.cshtml
@@ -22,9 +22,9 @@
     </div>
     <div class="blog-section">
         <a href="/AccumulationGoals/Index/@userId" class="target-btn">Accumulation Goals</a>
-        <button href="" class="target-btn">Yatırım Hedeflerim</button>
-        <button href="" class="target-btn">Eğitim Hedeflerim</button>
-        <button href="" class="target-btn">Gelişim Hedeflerim</button>
+        <a href="/BusinessGoals/Index/@userId" class="target-btn">Business Goals</a>
+        <a href="" class="target-btn">Education Goals</a>
+        <a href="" class="target-btn">Development Goals</a>
     </div>
 </div>
 
