--- a/DiscoverYourself/Views/BusinessGoals/Index.cshtml
+++ b/DiscoverYourself/Views/BusinessGoals/Index.cshtml
@@ -43,11 +43,11 @@
         </div>
         <div>
             <label>Daily Work Hours</label>
-            <input asp-for="DailyWorkHours" type="number" step="0.5" />
+            <input asp-for="DailyWorkHours" type="number" step="0.5" min="0" />
         </div>
         <div>
             <label>Daily Self-Development Hours</label>
-            <input asp-for="DailySelfDevelopmentHours" type="number" step="0.5" />
+            <input asp-for="DailySelfDevelopmentHours" type="number" step="0.5" min="0" />
         </div>
         <div>
             <label>Additional Info</label>
