--- a/DiscoverYourself/Views/BusinessGoals/Index.cshtml
+++ b/DiscoverYourself/Views/BusinessGoals/Index.cshtml
@@ -30,7 +30,7 @@
         </div>
         <div>
             <label>Tasks Completed</label>
-            <input asp-for="TasksCompleted" type="number" />
+            <input asp-for="TasksCompleted" type="number" min="0"/>
         </div>
         <div>
             <label>Task Type</label>
