add education model and update db context

--- a/DiscoverYourself/Views/Home/Index.cshtml
+++ b/DiscoverYourself/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
     <div class="blog-section">
         <a href="/AccumulationGoals/Index/@userId" class="target-btn">Accumulation Goals</a>
         <a href="/BusinessGoals/Index/@userId" class="target-btn">Business Goals</a>
-        <a href="" class="target-btn">Education Goals</a>
+        <a href="/EducationGoals/Index/@userId" class="target-btn">Education Goals</a>
         <a href="" class="target-btn">Development Goals</a>
     </div>
 </div>
