--- a/DiscoverYourself/Views/AccumulationGoals/Index.cshtml
+++ b/DiscoverYourself/Views/AccumulationGoals/Index.cshtml
@@ -23,7 +23,7 @@
         </div>
 
         <div class="section">
-            <div class="section-title">Goals</div>
+            <div class="section-title">Goals</div><br/><hr/>
             <div class="form-group">
                 <label for="targetCurrencyInput">Hedef Döviz Yatırımı (₺):</label>
                 <input type="number" id="targetCurrencyInput" name="TargetCurrency" placeholder="Hedef döviz miktarını giriniz" required>
@@ -39,7 +39,7 @@
         </div>
 
         <div class="section">
-            <div class="section-title">Realized</div>
+            <div class="section-title">Realized</div><br/><hr/>
             <div class="form-group">
                 <label for="actualCurrencyInput">Gerçekleşen Döviz Yatırımı (₺):</label>
                 <input type="number" id="actualCurrencyInput" name="ActualCurrency" placeholder="Yapılan döviz miktarını giriniz" required>
@@ -54,7 +54,7 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary mt-3">Save</button>
+        <button type="submit" class="btn btn-primary mt-3">Save</button><br/><br/>
         <button type="button" class="btn btn-secondary mt-3" onclick="updateChart()">Update Chart</button>
     </form>
 
