--- a/DiscoverYourself/wwwroot/css/login.css
+++ b/DiscoverYourself/wwwroot/css/login.css
@@ -124,3 +124,10 @@ body {
     color: #ffffff;
     box-shadow: 0 0 10px #17a2b8, 0 0 20px #17a2b8;
 }
+
+.language-selector .flag-icon {
+    width: 24px; /* İkonun genişliği */
+    height: auto;
+    margin-right: 8px; /* Metinden önceki boşluk */
+    vertical-align: middle; /* Metinle hizalamak için */
+}
